--- a/src/components/home/BentoGrid.astro
+++ b/src/components/home/BentoGrid.astro
@@ -6,7 +6,7 @@ import performanceImage from "../../assets/images/sections/dark-bento-03-perform
 import securityImage from "../../assets/images/sections/dark-bento-03-security.png";
 ---
 
-<section class="relative bg-black pb-26 pt-24">
+<section class="relative bg-black pb-20 pt-20 md:pb-26 md:pt-24">
   <div class="absolute inset-y-0 left-1/2 w-screen -translate-x-1/2 bg-black"></div>
       <div class="relative space-y-3 max-w-3xl mb-12">
       <p class="text-[12px] font-semibold uppercase tracking-[0.1em] text-[var(--accent)]">Standard wykonania</p>
