--- a/src/components/home/FeaturedWork.astro
+++ b/src/components/home/FeaturedWork.astro
@@ -36,7 +36,7 @@ const works = Object.entries(entries)
   .slice(0, 3);
 ---
 
-<section class="relative bg-white pt-20 pb-24">
+<section class="relative bg-white pt-20 pb-20 md:pb-24">
   <div class="absolute inset-y-0 left-1/2 w-screen -translate-x-1/2 bg-white"></div>
   <div class="relative flex flex-col gap-6 sm:flex-row sm:items-end sm:justify-between">
     <div class="space-y-3 max-w-3xl">
