--- a/src/components/home/LatestPosts.astro
+++ b/src/components/home/LatestPosts.astro
@@ -41,7 +41,7 @@ const getTag = (article) => {
 const getImage = (article) => resolveArticleImage(article?.tileImage ?? article?.thumbnail);
 ---
 
-<section class="relative pt-20 pb-24">
+<section class="relative pt-20 pb-22 md:pb-24">
   <div class="relative">
   <div class="">
     <div class="mb-12 space-y-3 max-w-4xl">
