--- a/src/layouts/heroes/PageHero.astro
+++ b/src/layouts/heroes/PageHero.astro
@@ -7,21 +7,21 @@ const { title, lead } = Astro.props;
 <section class="relative">
   <div class="pointer-events-none absolute inset-y-0 left-1/2 w-screen -translate-x-1/2 bg-black"></div>
   <div class="grid grid-cols-1 md:grid-cols-[minmax(0,1.66fr)_minmax(0,1fr)] min-h-[320px] relative">
-    <div class="relative flex flex-col justify-center pb-16 pt-32 z-10">
-      <div class="flex items-center space-x-2 text-[10px] uppercase tracking-[0.2em] text-gray-500 mb-6 font-bold">
+    <div class="relative flex flex-col justify-center pb-8 pt-28 md:pb-16 md:pt-32 z-10">
+      <div class="text-[8px] uppercase tracking-[0.1em] text-gray-500 mb-3 md:mb-4 font-semibold">
         <span>Główna</span>
         <span class="text-orange-600">></span>
         <span class="text-white">{title}</span>
       </div>
-      <h1 class="text-4xl md:text-5xl font-semibold leading-[1.1] tracking-tight text-white max-w-2xl">
+      <h1 class="text-3xl sm:text-3xl md:text-4xl lg:text-5xl font-semibold leading-[1.1] tracking-tight text-white max-w-2xl">
         {title}
       </h1>
       <div class="hidden lg:block absolute right-0 bottom-0 w-32 h-32 bg-[var(--accent)] z-20"></div>
     </div>
-    <div class="relative min-h-[320px] lg:min-h-full">
-      <div class="absolute inset-0 right-[0] bg-neutral-900 group overflow-hidden">
-      <Image
-          src={ heroImage } 
+    <div class="relative min-h-[160px] lg:min-h-full">
+      <div class="absolute inset-0 group overflow-hidden">
+        <Image
+          src={ heroImage }
           alt="Proces projektowy" 
           class="size-full object-cover grayscale opacity-80 group-hover:grayscale-0 group-hover:scale-105 transition-all duration-700"
           widths={[320, 480, 768]}
