--- a/src/pages/kontakt/index.astro
+++ b/src/pages/kontakt/index.astro
@@ -16,7 +16,7 @@ const contact = {
   title="Kontakt"
   description="Napisz lub zadzwon, opowiedz o projekcie i otrzymaj odpowiedz w 24-48h."
 >
-  <section class="pb-16 pt-16 grid gap-4 lg:gap-10 lg:grid-cols-[minmax(0,1fr)_minmax(0,1fr)] lg:gap-12">
+  <section class="pb-16 pt-12 md:pb-16 md:pt-16 grid gap-4 lg:gap-10 lg:grid-cols-[minmax(0,1fr)_minmax(0,1fr)] lg:gap-12">
     <div class="space-y-6">
       <div class="space-y-2">
         <p class="max-w-xl font-semibold text-2xl md:text-3xl">
