--- a/src/pages/realizacje/[slug].astro
+++ b/src/pages/realizacje/[slug].astro
@@ -40,7 +40,8 @@ if (!realizacja) {
   showHero={false}
 >
   <RealizacjeHero title={realizacja.title ?? realizacja.slug} lead={realizacja.description} />
-<section class="py-24 grid gap-12 md:grid-cols-[minmax(0,1fr)_minmax(0,1fr)] items-start">
+
+<section class="py-16 md:py-24 grid gap-12 md:grid-cols-[minmax(0,1fr)_minmax(0,1fr)] items-start">
   {/* Lewa kolumna: Obrazek z Twoim charakterystycznym obramowaniem i lekkim desaturatem */}
   <div class="relative group">
     {headerImage ? (
