--- a/src/components/home/Hero.astro
+++ b/src/components/home/Hero.astro
@@ -18,8 +18,8 @@ const ctaPrimary = { label: "Zobacz realizacje", href: "/realizacje/" };
     </div>
 
     <h1 class="text-4xl md:text-6xl font-semibold tracking-tight leading-[1.1] mb-8">
-      Projektuje nowoczesne <br>
-      <span class="text-white">strony internetowe</span>
+      Tworzę strony internetowe 
+      <span class="text-white"> skupione na wyniki biznesowe</span>
     </h1>
 
       <p class="max-w-2xl text-md text-gray-300 mb-10">
