--- a/src/components/home/ClientsLogos.astro
+++ b/src/components/home/ClientsLogos.astro
@@ -28,7 +28,7 @@ const logos = Object.entries(logoEntries)
           </p>
         </div>
   </div>
-  <div class="mt-10 grid gap-4 text-center grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6">
+  <div class="mt-10 grid gap-2 md:gap-4 text-center grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6">
     {logos.map((logo) => (
       <div class="flex items-center justify-center border border-gray-300 rounded-md px-6 py-4">
         <Image
