--- a/src/layouts/heroes/MiastaHero.astro
+++ b/src/layouts/heroes/MiastaHero.astro
@@ -8,7 +8,7 @@ const { title, lead } = Astro.props;
   <div class="pointer-events-none absolute inset-y-0 left-1/2 w-screen -translate-x-1/2 bg-black"></div>
   <div class="grid grid-cols-1 md:grid-cols-[minmax(0,1.66fr)_minmax(0,1fr)] min-h-[320px] relative">
     <div class="relative flex flex-col justify-center pb-8 pt-28 md:pb-16 md:pt-32 z-10">
-      <div class="text-[8px] uppercase tracking-[0.1em] text-gray-500 mb-3 md:mb-4 font-semibold">
+      <div class="text-[8px] md:text-[10px] uppercase tracking-[0.1em] text-gray-400 mb-3 md:mb-6 font-semibold">
         <span>Główna</span>
         <span class="text-orange-600">></span>
         <span class="text-white">{title}</span>
