--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -291,6 +291,12 @@ import contactFormUrl from "../scripts/contact-form.js?url";
   </div>
 </div>
 
+<div class="circle-container">
+		<svg class="circle-progress svg-content" width="100%" height="100%" viewBox="-1 -1 102 102">
+			<path d="M50,1 a49,49 0 0,1 0,98 a49,49 0 0,1 0,-98"/>
+		</svg>
+</div>
+
 <script src={cookieModalUrl} defer></script>
 <script src={contactFormUrl} defer></script>
 
@@ -316,3 +322,46 @@ import contactFormUrl from "../scripts/contact-form.js?url";
   }
 </script>
 -->
+
+<script>
+document.addEventListener("DOMContentLoaded", function(event) {
+        
+		let offset = 50;
+		let circleContainer = document.querySelector(".circle-container");
+		let circlePath = document.querySelector('.circle-container path');
+		let pathLength = circlePath.getTotalLength();
+		circlePath.style.transition = 					circlePath.style.WebkitTransition = 'none';
+		circlePath.style.strokeDasharray = pathLength;
+		circlePath.style.strokeDashoffset = pathLength;
+		circlePath.getBoundingClientRect();
+		circlePath.style.transition = circlePath.style.WebkitTransition = 'stroke-dashoffset 10ms linear';
+
+		let updateLoader = () => {
+
+			let scrollTop = window.scrollY;
+			let docHeight = document.body.offsetHeight;
+			let winHeight = window.innerHeight;
+			let height = docHeight - winHeight;
+			let progress = pathLength - (scrollTop * pathLength / height);
+			circlePath.style.strokeDashoffset = progress;
+
+			if (scrollTop > offset) {
+				circleContainer.classList.add("active");
+			} else {
+				circleContainer.classList.remove("active");
+			}
+            
+		}
+
+	circleContainer.onclick = function(){
+		window.scrollTo({ top: 0, behavior: 'smooth'});
+	}
+
+	window.onscroll = () => {
+		updateLoader();
+	}
+
+	updateLoader();
+
+});
+</script>
