--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -60,3 +60,37 @@
 body {
   overflow-x: hidden;
 }
+
+
+.circle-container {
+  background: transparent;
+  position: fixed;
+  right: 50px;
+  bottom: 50px;
+  height: 46px;
+  width: 46px;
+  cursor: pointer;
+  display: block;
+  border-radius: 50px;
+  box-shadow: inset 0 0 0 2px rgba(0, 0, 0, 0.2);
+  z-index: 10000;
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(15px);
+  -webkit-transition: all 200ms linear;
+  transition: all 200ms linear;
+}
+.circle-container.active {
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(0);
+}
+.circle-container svg path {
+  fill: none;
+}
+.circle-container svg.circle-progress path {
+  stroke: var(--accent);
+  stroke-width: 4;
+  box-sizing: border-box;
+  transition: stroke-dashoffset 100ms linear !important;
+}
