--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -291,43 +291,21 @@ import contactFormUrl from "../scripts/contact-form.js?url";
   </div>
 </div>
 
-<div class="circle-container">
+<div class="circle-container hidden md:flex items-center justify-center relative">
 		<svg class="circle-progress svg-content" width="100%" height="100%" viewBox="-1 -1 102 102">
 			<path d="M50,1 a49,49 0 0,1 0,98 a49,49 0 0,1 0,-98"/>
 		</svg>
+    <svg class="h-4 w-4 text-white absolute top-4 left-4" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="var(--accent)">
+      <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 15.75l7.5-7.5 7.5 7.5" />
+    </svg>
 </div>
 
-<script src={cookieModalUrl} defer></script>
-<script src={contactFormUrl} defer></script>
-
-<!-- 
-<script src={gsapUrl} defer></script>
-<script src={scrollTriggerUrl} defer></script>
-<script src={splitTextUrl} defer></script>
-<script src={lenisUrl} defer></script>
-<script src={swiperUrl} defer></script>
-<script src={vendorUrl} defer></script>
-<script src={animationsUrl} defer></script>
-<script src={scriptUrl} defer></script>
-<script is:inline>
-  const runApp = () => {
-    if (typeof appMain === "function") appMain();
-    if (typeof animationMain === "function") animationMain();
-  };
-
-  if (document.readyState === "complete") {
-    runApp();
-  } else {
-    window.addEventListener("load", runApp, { once: true });
-  }
-</script>
--->
-
 <script>
-document.addEventListener("DOMContentLoaded", function(event) {
+document.addEventListener("astro:page-load", function(event) {
+    let circleContainer = document.querySelector(".circle-container");
+    if (!circleContainer) return;
         
 		let offset = 50;
-		let circleContainer = document.querySelector(".circle-container");
 		let circlePath = document.querySelector('.circle-container path');
 		let pathLength = circlePath.getTotalLength();
 		circlePath.style.transition = 					circlePath.style.WebkitTransition = 'none';
@@ -365,3 +343,29 @@ document.addEventListener("DOMContentLoaded", function(event) {
 
 });
 </script>
+
+<script src={cookieModalUrl} defer></script>
+<script src={contactFormUrl} defer></script>
+
+<!-- 
+<script src={gsapUrl} defer></script>
+<script src={scrollTriggerUrl} defer></script>
+<script src={splitTextUrl} defer></script>
+<script src={lenisUrl} defer></script>
+<script src={swiperUrl} defer></script>
+<script src={vendorUrl} defer></script>
+<script src={animationsUrl} defer></script>
+<script src={scriptUrl} defer></script>
+<script is:inline>
+  const runApp = () => {
+    if (typeof appMain === "function") appMain();
+    if (typeof animationMain === "function") animationMain();
+  };
+
+  if (document.readyState === "complete") {
+    runApp();
+  } else {
+    window.addEventListener("load", runApp, { once: true });
+  }
+</script>
+-->
