--- a/src/components/home/ClientsLogos.astro
+++ b/src/components/home/ClientsLogos.astro
@@ -24,7 +24,7 @@ const logos = Object.entries(logoEntries)
               <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
           </div>
           <p class="text-sm font-bold text-black">
-            4.8 Ocena <span class="ml-2 font-normal text-gray-600">10+ Opinii</span>
+            5/5 Ocena <span class="ml-2 font-normal text-gray-600">15+ Opinii</span>
           </p>
         </div>
   </div>
