--- a/src/layouts/heroes/ArticlesHero.astro
+++ b/src/layouts/heroes/ArticlesHero.astro
@@ -13,7 +13,7 @@ const formattedDate = date ? new Date(date).toLocaleDateString('pl-PL', {
   <div class="relative space-y-4 mx-auto max-w-3xl">
         <div class="text-[8px] md:text-[10px] uppercase tracking-[0.1em] text-gray-400 mb-3 md:mb-6 font-semibold">
         <span>Główna</span>
-        <span class="text-orange-600"> > </span>
+        <span class="text-[var(--accent)]"> > </span>
         <span class="text-white"> {title}</span>
       </div>
     <h1 class="text-2xl sm:text-3xl md:text-4xl lg:text-5xl font-semibold tracking-tight text-white">
@@ -25,12 +25,12 @@ const formattedDate = date ? new Date(date).toLocaleDateString('pl-PL', {
   <div class="flex flex-wrap gap-x-8 gap-y-2 py-4 mt-4 md:py-8 md:mt-8 border-t border-white/15 font-semibold text-[8px] md:text-[10px] tracking-[0.15em] uppercase">
     {tags && tags.length > 0 && (
       <div class="text-gray-400">
-        Kategoria: <span class="text-white">{tags[0]}</span>
+        Kategoria <span class="text-[var(--accent)]"> > </span> <span class="text-white">{tags[0]}</span>
       </div>
     )}
     {formattedDate && (
       <div class="text-gray-400">
-        Opublikowano: <span class="text-white">{formattedDate}</span>
+        Opublikowano <span class="text-[var(--accent)]"> > </span> <span class="text-white">{formattedDate}</span>
       </div>
     )}
     <!--
