--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -182,7 +182,7 @@ const mobileLinkClass = (href) =>
                 </button>
             </div>
 
-            <div class="flex flex-col gap-9 pt-12">
+            <div class="flex flex-col gap-5 pt-12">
                 {
                     navItems.map((item) => (
                         <a
@@ -192,6 +192,7 @@ const mobileLinkClass = (href) =>
                         >
                             {item.label}
                         </a>
+						<div class="border border-b border-white/10"></div>
                     ))
                 }
             </div>
