--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -65,8 +65,8 @@ body {
 .circle-container {
   background: transparent;
   position: fixed;
-  right: 50px;
-  bottom: 50px;
+  right: 40px;
+  bottom: 40px;
   height: 46px;
   width: 46px;
   cursor: pointer;
@@ -80,11 +80,6 @@ body {
   -webkit-transition: all 200ms linear;
   transition: all 200ms linear;
 }
-.circle-container.active {
-  opacity: 1;
-  visibility: visible;
-  transform: translateY(0);
-}
 .circle-container svg path {
   fill: none;
 }
@@ -93,4 +88,11 @@ body {
   stroke-width: 4;
   box-sizing: border-box;
   transition: stroke-dashoffset 100ms linear !important;
+}
+@media(min-width:767px) {
+  .circle-container.active {
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(0);
+}
 }
