--- a/src/pages/kontakt/index.astro
+++ b/src/pages/kontakt/index.astro
@@ -20,11 +20,11 @@ const contact = {
     <div class="space-y-6">
       <div class="space-y-2">
         <h2 class="max-w-xl font-semibold text-2xl md:text-3xl">
-          Opisz jaki cel ma relizowac strona, termin wykonania i budżet
+          Opisz jaki cel ma relizować strona, termin wykonania i budżet
         </h2>
         <p class="max-w-xl text-base text-[var(--muted)]">
-          Jeśli masz brief, link do inspiracji albo obecnej strony,
-          podaj je w wiadomości. Odezwę się z propozycją dalszych kroków, wstępną wyceną oraz planem działań.
+          Jeśli masz brief, linki do inspiracji albo obecnej strony,
+          prześlij je w wiadomości. Odezwę się z propozycją dalszych kroków, planem działań i wstępną wyceną.
         </p>
       </div>
       <div class="space-y-4">
